--- a/light.css
+++ b/light.css
@@ -82,8 +82,9 @@ p {
 .aframe {
   background: mediumaquamarine;
   height: fit-content;
-  min-height: 40px;
+  min-height: 37px;
   border-radius: 10px;
+  padding: 3px;
 }
 .aframe:hover {
   background: rgba(102,221,170,0.4);
@@ -119,7 +120,6 @@ p {
   max-width: 90vw;
   padding-left: 5vw;
 }
-
 }
 
 @media all and (min-aspect-ratio: 1) {
@@ -143,6 +143,6 @@ p {
   padding-top: 15px;
   max-height: 50vh;
   max-width: 50vh;
-  padding-left: 6%;
+  padding-left: 10vw;
 }
 }
